--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <title>js-fizzbuzzdom</title>
 </head>
 <body>
+
     <main>
+        <div class="container">
+            <div id="container" class="row  d-flex flex-wrap justify-content-center">
+                <h1 class="text-center my-4">Fizz Buzz & FizzBuzz</h1>
+            </div>
+
+        </div>
+    </main>    
+    
     <script type="text/javascript" src="myscript.js"></script>
 </body>
 </html>
