--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
     <main>
-        <div class="container">
-            <div id="container" class="row  d-flex flex-wrap justify-content-center">
-                <h1 class="text-center my-4">Fizz Buzz & FizzBuzz</h1>
+        <div class="container pt-5">
+            <div id="container" class="row ms_table d-flex flex-wrap justify-content-center">
+                <h1 class="text-center py-4">Fizz Buzz & FizzBuzz</h1>
             </div>
 
         </div>
